Fix #77 tag height on IE

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -708,6 +708,11 @@ a.author:hover
     cursor: pointer;
 }
 
+.ua-win .tag
+{
+    padding-top: 4px;
+}
+
 .tag:before
 {
     content: "";
